# nifc-wildfires

./: .coveragerc  .travis.yml  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: continuous-deployment.yml  docs.yml  scrape.yml  tests.yml
data/: perimeters.json  timestamp.txt
docs/: conf.py  index.md
geomac_active_fires/: __init__.py  cli.py
geomac_wildfires/: __init__.py  cli.py
nifc_wildfires/: __init__.py  cli.py
